<resources>

    <!-- Titles -->
    <string name="app_name">myEvents</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_groups">Groups</string>
    <string name="title_events">Events</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>
    <string name="title_description">Description</string>
    <string name="title_create_event">Create event</string>
    <string name="title_people">People</string>
    <string name="title_edit_event">Edit event</string>
    <string name="title_rsvp">RSVP</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User settings</string>
    <string name="title_privacy">User data</string>
    <string name="title_create_user">Create user</string>
    <string name="title_warning">Warning!</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_adding_user">Selected contacts</string>
    <string name="title_event_details">Event details</string>
    <string name="title_event_contacts">People</string>
    <string name="title_add_contacts">Add contacts</string>

    <!-- Notification Channels -->
    <string name="channel_event">event</string>
    <string name="channel_invite">invite</string>
    <string name="channel_friend">friend</string>
    <string name="channel_event_description">Notifications for events</string>
    <string name="channel_invite_description">Notifications for event invitations</string>
    <string name="channel_friend_description">Notifications for friend requests</string>


    <!-- Hints -->
    <string name="hint_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_display_name">Display name</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_terms">I have read and agree to terms and conditions.</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_description">Write your event description here!</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>
    <string name="hint_start_time">Start time</string>
    <string name="hint_end_time">End time</string>
    <string name="hint_isOnline">Is this an online event?</string>
    <string name="hint_user_created">User has been successfully created!</string>
    <string name="hint_location">Location</string>
    <string name="hint_address">Address</string>
    <string name="hint_time">Time</string>
    <string name="hint_set_reminder_date">Set reminder date</string>
    <string name="hint_set_reminder_time">Set reminder time</string>
    <string name="hint_search_contact">Search for contacts</string>

    <!-- Temp -->
    <string name="temp_hosted_by">John Smith</string>
    <string name="temp_ppl_going">There are no people going to this event.</string>

    <!-- Buttons -->
    <string name="btn_forgot">Forgot password</string>
    <string name="btn_create_account">Create account</string>
    <string name="btn_create_event">Create Event</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_info">Info</string>
    <string name="btn_people">People</string>
    <string name="btn_going">Going</string>
    <string name="btn_maybe">Maybe</string>
    <string name="btn_invited">Invited</string>
    <string name="btn_not_going">Not going</string>
    <string name="btn_events">Events</string>
    <string name="btn_invites">Invites</string>
    <string name="btn_friends">Friends</string>
    <string name="btn_notification_settings">Notification settings</string>
    <string name="btn_edit_user">Edit user settings</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_delete_user">Delete user</string>
    <string name="btn_delete_all_events">Delete all events</string>
    <string name="btn_show_all_data">Get all user data</string>
    <string name="btn_add_reminder">Add a reminder</string>
    <string name="btn_change_reminder">Change reminder</string>
    <string name="btn_delete_event">Delete event</string>
    <string name="btn_edit_event">Update event</string>

    <!-- Navigation -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_events">Events</string>
    <string name="nav_settings">Settings</string>


    <!-- Errors -->
    <string name="error_invalid_email">Email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Email and password don\'t match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_dont_match">Passwords don\'t match</string>
    <string name="error_invalid_input">Input too short</string>
    <string name="error_terms_not_checked">You must accept terms to use app.</string>
    <string name="error_no_location">Event needs a location or to be set as Online</string>
    <string name="error_event_early">Selected date has already passed.</string>
    <string name="error_event_end_early">Event cannot end before it starts.</string>
    <string name="error_nothing_here">There\'s nothing here!</string>
    <string name="error_no_reminder">You have chosen a reminder, but haven\'t set a time.</string>
    <string name="error_reminder_late">Reminder can\'t be set after event start time</string>
    <string name="error_reminder_early">Reminder can\'t be set before current time.</string>
    <string name="error_no_internet">You\'re not connected to the internet. Several functions will be disabled</string>
    <string name="error_not_ready">Sorry, contacts are not yet ready. Please come back later.</string>
    <string name="error_no_event">Cannot get event. It could have been deleted.</string>


    <!-- Messages -->
    <string name="msg_event_online">Online event</string>
    <string name="msg_friends_request">Pending friend requests</string>
    <string name="msg_friends">Contacts</string>
    <string name="msg_friends_pending">Invitations sent</string>
    <string name="msg_test_notification_channels">Click each button to test the notification channels:</string>
    <string name="msg_invite">Invites</string>
    <string name="msg_requests">Friends</string>
    <string name="msg_event">Events</string>
    <string name="msg_not_set">Not set</string>
    <string name="msg_email_not_verified">You email hasn\'t been verified. Click here to resend verification email!</string>
    <string name="msg_password_recovery_sent">A message has been sent to your email with instructions to reset your password.</string>
    <string name="msg_temp">This is a placeholder string</string>
    <string name="msg_delete_events">Are you sure you want to delete all your events? This cannot be undone!</string>
    <string name="msg_delete_user">By deleting your account, all events will also be deleted! Are you sure you want to delete your account? This cannot be undone!</string>
    <string name="msg_event_channel_working">Event channel is working and active</string>
    <string name="msg_invite_channel_working">Invite channel is working and active</string>
    <string name="msg_friend_channel_working">Friend channel is working and active</string>
    <string name="msg_success_user_data_change">Userdata successfully updated!</string>
    <string name="msg_success_new_password">Password updated successfully!</string>
    <string name="msg_nothing_selected">You have not selected any contacts</string>

    <!-- Warnings -->
    <string name="msg_warning_password">Input your password and touch accept to confirm</string>
    <string name="msg_warning_default">Are you sure you want to proceed?</string>
    <string name="msg_warning_delete_event">Are you sure you want to delete this event? This action cannot be undone!</string>
    <string name="msg_warning_delete_all_events">Are you sure you want to delete all your events? This will also remove you from all other events you\'ve been invited to. Action cannot be undone!</string>
    <string name="msg_warning_delete_account">Are you sure you want to delete your account? Deleting your account will also delete all your events, remove you from any event you\'re invited to and remove all your contacts! This action cannot be undone.</string>
    <string name="msg_warning_not_going">By choosing "not going", you will remove the event from your overview. Owner can invite you again.</string>
    <string name="msg_warning_input_email">Input email to continue...</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus felis nisi, fermentum finibus porttitor ac, bibendum ut lacus. Nulla rutrum velit eu semper lobortis. Suspendisse non porta risus. Sed lectus tellus, gravida in efficitur quis, volutpat eget nulla. Nullam ornare sodales nibh, ut consequat sapien rutrum sit amet</string>

    <!-- Loading -->
    <string name="loading_name">Loading name...</string>
    <string name="loading_email">Loading email...</string>
    <string name="loading_event">Loading event...</string>
    <string name="loading_generic">Loading...</string>

    <!-- AutoStrings from templates -->

    <string name="title_activity_your">YourActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
